Fix for warning icon aligning

--- a/nailgun/static/styles/main.less
+++ b/nailgun/static/styles/main.less
@@ -3739,6 +3739,13 @@ input[type=range] {
       vertical-align: middle;
     }
   }
+  .node-network-groups-list {
+    .subtab-link-network_verification {
+      .glyphicon-danger-sign {
+        top: 16px;
+      }
+    }
+  }
   .node-netwrok-groups-controls {
     padding-right: 30px;
   }
